<resources>
    <string name="app_name">Seismos.GR</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Robert Niederer</string>

    <string name="pref_title_maptypes">Map type</string>
    <string-array name="pref_list_MapTypes">
        <item>Map</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>map</item>
        <item>hybrid</item>
        <item>satellite</item>
        <item>terrain</item>
    </string-array>

    <string name="pref_title_zoom">Zoom Level</string>
    <string-array name="pref_list_zoom">
        <item>very Close</item>
        <item>Close</item>
        <item>Normal</item>
        <item>Far</item>
        <item>very Far</item>
    </string-array>
    <string-array name="pref_zoom_list_values">
        <item>12</item>
        <item>10</item>
        <item>7</item>
        <item>4</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minutes</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>60</item>
        <item>300</item>
        <item>900</item>
        <item>3600</item>
        <item>21600</item>
        <item>43200</item>
        <item>86400</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_notification">Notification</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_maps">Seismos.GR</string>
    <string name="title_activity_map_container">Map</string>
    <string name="earthquakes_last_48_hours">Earthquakes last 48 hours</string>
    <string name="earthquakes_last_24_hours">Earthquakes last 24 hours</string>
    <string name="title_depth">Depth</string>
    <string name="title_distance">Distance</string>
    <string name="title_lat">Latitude</string>
    <string name="title_lon">Longitude</string>
    <string name="title_coordinates">Coordinates</string>

    <string name="facebook_app_id">1683511068575332</string>
    <string name="title_activity_charts">Charts</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="Events_last_24_hours">Events last 24 hours</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_all_events">all events</string>
    <string name="string_nearyour">near you</string>
    <string name="string_todays_events">todays events</string>
    <string name="string_todays_events_l3">todays events smaller m3</string>
    <string name="string_todays_events_l5">todays events m3 - m5</string>
    <string name="string_todays_events_b5">todays events stronger m5</string>
    <string name="string_48_events_l3">todays events smaller m3 (48 hours)</string>
    <string name="string_48_events_l5">todays events m3 - m5 (48 hours)</string>
    <string name="string_48_events_b5">todays events stronger m5 (48 hours)</string>
    <string name="banner_ad_unit_id">ca-app-pub-3661113163061976/1518188443</string>

    <string name="hello">Hello World!</string>
    <string name="title">Hello Notification!</string>
    <string name="notification_posted">Notification posted</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
