<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message_notificate"
        android:title="@string/pref_title_notification" />

      <SwitchPreference
        android:defaultValue="false"
        android:dependency="notifications_new_message_notificate"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />
</PreferenceScreen>
