<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardlist001"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:clickable="true"
    app:cardCornerRadius="@dimen/activity_vertical_margin"
    app:cardElevation="@dimen/activity_vertical_margin"
    android:foreground="@drawable/card_foreground"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="center"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/magnitude_left_big_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5.0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:textSize="30dp"
            style="@style/MagnitudeOverlayText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:text="Title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/title"
                android:clickable="true"
                android:text="Subtitle"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle"
                android:clickable="true"
                android:text="@string/title_distance" />

            <TextView
                android:id="@+id/Depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distance"
                android:clickable="true"
                android:text="@string/title_depth" />

            <TextView
                android:id="@+id/coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle"
                android:clickable="true"
                android:text="@string/title_coordinates" />

        </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>